Revert "Issue where on comp it shows one thing but on mobile its diff"
This reverts commit c6cb6b18aa9f59a401b88c4b932b6156793cda94.

--- a/style.css
+++ b/style.css
@@ -1558,7 +1558,7 @@ form input, form textarea {
       grid-row-end: 2;
   }
   .heroButton {
-    top: 35%;
+    top: 25%;
     left: 88%;
     font-size: 10px;
     padding: 6px 12px;
